# snip

./: .gitignore  CHANGELOG.md  Makefile  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: cli-reference.md  scripting.md  themes.md  tips-and-tricks.md
snip/: __init__.py  __main__.py  app.py  snip.tcss  themes.py
snip/models/: __init__.py  snippet.py
snip/storage/: __init__.py  database.py
snip/ui/screens/: edit_screen.py  main_screen.py
snip/ui/widgets/: app_header.py  snippet_list.py  snippet_preview.py
snip/utils/: __init__.py  clipboard.py
tests/: conftest.py  test_clipboard.py  test_database.py  test_main.py  test_snippet.py  test_themes.py
