[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snip-tui"
version = "0.7.0"
description = "A terminal snippet manager — store, search, and copy code snippets without leaving your shell"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["cli", "tui", "snippets", "terminal", "textual"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.47.0",
    "pyperclip>=1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[project.scripts]
snip = "snip.__main__:main"

[project.urls]
Homepage = "https://github.com/phlx0/snip"
Repository = "https://github.com/phlx0/snip"
Issues = "https://github.com/phlx0/snip/issues"

[tool.hatch.build.targets.wheel]
packages = ["snip"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["snip"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (undefined names, unused imports, etc.)
    "I",   # isort (import order)
    "UP",  # pyupgrade (modern Python syntax)
]
ignore = [
    "E501",  # line too long — formatter handles this
]

[tool.ruff.lint.isort]
known-first-party = ["snip"]
